; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_qp.c_first_hi_uuar.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_qp.c_first_hi_uuar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_uuar_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_uuar_info*)* @first_hi_uuar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @first_hi_uuar(%struct.mlx5_uuar_info* %0) #0 {
  %2 = alloca %struct.mlx5_uuar_info*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.mlx5_uuar_info* %0, %struct.mlx5_uuar_info** %2, align 8
  %6 = load %struct.mlx5_uuar_info*, %struct.mlx5_uuar_info** %2, align 8
  %7 = call i32 @num_med_uuar(%struct.mlx5_uuar_info* %6)
  store i32 %7, i32* %3, align 4
  store i32 0, i32* %5, align 4
  %8 = call i32 (...) @first_med_uuar()
  store i32 %8, i32* %4, align 4
  br label %9

9:                                                ; preds = %19, %1
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %3, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %9
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @next_uuar(i32 %16)
  ret i32 %17

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @next_uuar(i32 %20)
  store i32 %21, i32* %4, align 4
  br label %9
}

declare dso_local i32 @num_med_uuar(%struct.mlx5_uuar_info*) #1

declare dso_local i32 @first_med_uuar(...) #1

declare dso_local i32 @next_uuar(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
